# cessda.mess

./: .env.example  .gitignore  Dockerfile  Jenkinsfile  LICENSE  README.md  docker-compose.qlever.yml  docker-compose.yml  pyproject.toml
app/: config.py  database.py  main.py
app/models/: __init__.py  base.py  digital_object.py  relationship.py
app/routers/: admin.py  enrich.py  health.py  objects.py  sparql.py  status.py
app/schemas/: digital_object.py  enrich.py  health.py  objects.py  pid.py  relationship.py  skg_if.py  stats.py  status.py
app/services/: cache.py  enrichment.py  http_utils.py  openaire.py  openalex.py  pid_validator.py  scholexplorer.py  source_endpoint.py
app/static/: browse.html  graph.html  index.html  sparql.html
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_external_ids.py  0003_projects.py  0004_publication_date.py
scripts/: clean.sh  etl.sh  export_triples.py  rebuild_qlever.sh  restart.sh  start.sh  stop.sh
tests/: conftest.py
tests/fixtures/: openaire_response.json  openalex_response.json  scholexplorer_response.json  skg_if_source_response.json
tests/integration/: test_admin.py  test_enrich.py  test_health.py  test_sparql.py  test_status.py
tests/unit/: test_cache.py  test_pid_validator.py  test_rdf_builder.py  test_skg_if.py
